--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 swimming
 ~~~~~~~~
 
-"A small win is a concrete, complete, implemented outcome of moderate importance."
+"A small win is a concrete, complete, implemented outcome of moderate importance... Small wins are controllable opportunities that produce visible results." – Karl Weick
