--- a/README
+++ b/README
@@ -3,6 +3,8 @@ swim
 
 A small tool to create and track small wins. What is a "small win"?
 
-"A small win is a concrete, complete, implemented outcome of moderate importance... Small wins are controllable opportunities that produce visible results." – Karl Weick
+    "A small win is a concrete, complete, implemented outcome of moderate importance... Small wins are controllable opportunities that produce visible results." – Karl Weick
 
-For more information, see: http://rittersp.com/wp-content/uploads/2014/03/Chambliss-Mundanity-of-Excellence.pdf
+For more information, see:
+
+    http://rittersp.com/wp-content/uploads/2014/03/Chambliss-Mundanity-of-Excellence.pdf
