--- a/README
+++ b/README
@@ -3,7 +3,10 @@ swim
 
 A small tool to create and track small wins. What is a "small win"?
 
-    "A small win is a concrete, complete, implemented outcome of moderate importance... Small wins are controllable opportunities that produce visible results." – Karl Weick
+    "A small win is a concrete, complete, implemented outcome of moderate importance...
+    Small wins are controllable opportunities that produce visible results."
+
+    – Karl Weick
 
 For more information, see:
 
