Added small FAQ.

--- a/README
+++ b/README
@@ -11,3 +11,7 @@ A small tool to create and track small wins. What is a "small win"?
 For more information, see:
 
     http://rittersp.com/wp-content/uploads/2014/03/Chambliss-Mundanity-of-Excellence.pdf
+
+Wait, is this just a fancy to-do list?
+
+    Yeah.
